# mc_collision_detection_force_torque_sensor

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
etc/: CollisionDetectionForceTorqueSensor.in.yaml
src/: CollisionDetectionForceTorqueSensor.cpp  CollisionDetectionForceTorqueSensor.h
tests/etc/: mc_rtc.yaml
